--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en"><!--Tuka e pocetokot na se sto rabotime so html -->
 <head>
     <title>text</title><!--kako ke se vika stranata-->
+    <link rel="icon" type="image/x-icon" href="images/1.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="widht=device-widht, initial-scale=1"><!--ova ja prilagoduva stranata za sekakov vid na ured koj ke go koristime(komp,mob itn)-->
     <meta name="description" content="text">
