--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 <body>
     <header>
         <nav><!--navigacisko meni-->
-            <a href="#happiness.html">happiness</a>
-            <a href="#books.html">books</a>
-            <a href="#contact.html">contact</a>
-            <a href="#aboutUs.html">aboutsus</a>
+            <ul>
+            <li><a href="#happiness.html">happiness</a></li>
+            <li><a href="#books.html">books</a></li>
+            <li><a href="#contact.html">contact</a></li>
+            <li><a href="#aboutUs.html">aboutsus</a></li>
+
+            </ul>
+            
 
         </nav>
 
