--- a/index.html
+++ b/index.html
@@ -9,18 +9,12 @@
 </head>
 <body>
     <header>
-        <nav><!--navigacisko meni-->
-            <ul>
-            <li><a href="#happiness.html">happiness</a></li>
-            <li><a href="#books.html">books</a></li>
-            <li><a href="#contact.html">contact</a></li>
-            <li><a href="#aboutUs.html">aboutsus</a></li>
-
-            </ul>
-            
-
-        </nav>
-
+        <ul>
+            <li><a href="happiness.html">Happiness</a></li>
+            <li><a href="books.html">Books</a></li>
+            <li><a href="aboutsUs.html">AboutUs</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        
     </header>
         <main>
         <h1>Text</h1>
