--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>text</title>
     <link rel="icon" type="image/x-icon" href="images/1.ico">
     <meta charset="UTF-8">
-    <meta name="viewport" content="widht=device-widht, initial-scale=1"><!--ova ja prilagoduva stranata za sekakov vid na ured koj ke go koristime(komp,mob itn)-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="text">
 </head>
 <body>
